--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,8 @@ svg {
 .bigHit-image img {
   border-radius: 25px;
   align-items: center;
+  width: 100%;
+  max-width: 700px;
 }
 
 .section-nabis {
