--- a/css/style.scss
+++ b/css/style.scss
@@ -130,6 +130,10 @@ animation-delay: -5s;
   border-radius: 25px;
   align-items: center;
   // max-width: 703px;
+  width: 100%;
+  max-width: 700px;
+  
+
 }
 
 
