--- a/css/style.scss
+++ b/css/style.scss
@@ -128,7 +128,6 @@ animation-delay: -5s;
 }
 .bigHit-image img {
   border-radius: 25px;
-  align-items: center;
   // max-width: 703px;
   width: 100%;
   max-width: 700px;
@@ -146,6 +145,7 @@ animation-delay: -5s;
   display: flex;
   margin-bottom: 50px;
   gap: 30px;
+  align-items: center;
 }
 .nabis-title {
   font-weight: 600;
@@ -169,9 +169,13 @@ animation-delay: -5s;
     margin-top: 5px;
   }
 }
-.nabis-image img {
-  border-radius: 25px;
+.nabis-image {
+  display: flex;
   align-items: center;
+  img {
+  border-radius: 25px;
+  min-width: 700px;
+  }
 }
 
 // BODY DANCE
@@ -254,7 +258,6 @@ animation-delay: -5s;
 .theHits-image img {
   border-radius: 25px;
 
-  // margin: 0 auto;
 }
 
 // THE CLAPS
